css/styles.css
body {
font-family: "Roboto",
        sans-serif;
        color: #434455;
        background-color: #fff;
}

/* reset */

ul, ol {
    list-style: none;
    margin: 0;
    padding: 0;
}
a {
    text-decoration: none;
}
h1, h2, h3, h4, h5, h6, p {
    margin: 0;
}

/* common */

.container {
    max-width: 1158px;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
    margin-right: auto;
}
img {
    display: block;
    max-width: 100%;
}

/* header */

.page-header {
    border-bottom: 1px solid #e7e9fc;
    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
        background: #fff;
}

.header-container{
    display: flex;
    align-items: center;
}
.header-nav{
    display: flex;
    align-items: center;
}
.nav-list {
    display: flex;
    align-items: center;
    gap: 40px;
}
.contacts-list{
    display: flex;
    align-items: center;
}


.logo {
    font-family: "Raleway", sans-serif;
    font-weight: 700;
        font-size: 18px;
        line-height: 1.17;
        letter-spacing: 0.03em;
        text-transform: uppercase;
        color: #4d5ae5;
}
.header-logo {
    padding: 24px 0;
    margin-right: 76px;
}

.header-logo .logo-part {
color: #2e2f42;
}
.footer-logo .logo-part {
    color: #f4f4fd;
}
    
.nav-link{
    display: block;
    padding: 24px 0;
   font-weight: 500;
        font-size: 16px;
    line-height: 1.5;
        letter-spacing: 0.02em;
        color: #2e2f42;
        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
        position: relative;

}

.contacts{
   font-style: normal;
margin-left: auto;
}

.contacts-list{
    display: flex;
    gap: 40px;
}

.contacts-link {
    display: block;
    padding: 24px 0;
    font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}



.nav-link:hover,
.nav-link:focus,
.contacts-link:hover,
.contacts-link:focus {
    color: #404bbf;
    position: relative;
}

.nav-link.current{
    color: #404bbf;
}

.nav-link.current::after{
    content: "";
    display: block;
    border-radius: 2px;
    width: 100%;
    height: 4px;
    background-color: #404bbf;
    position: absolute;
    bottom: -1px;
    
}

/* main content */
.main-h{
    background-color: #2e2f42;
padding-top: 188px;
    padding-bottom: 188px;
    display: flex;
    flex-direction: column;
    align-items: center;
    
    background-image: 
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url(../images/people-office1.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    max-width: 1440px;
    margin: 0 auto;

        
    
 
   
    
}
.main-tittle {
   font-weight: 700;
        font-size: 56px;
     line-height: 1.07;
        letter-spacing: 0.02em;
        text-align: center;
        color: #fff;
      
      max-width: 496px;
   
               
}
.button {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;
    color: #fff;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
    background: #4d5ae5;
    cursor: pointer;
    display: block;
    margin-top: 48px;
    margin-left: auto;
    margin-bottom: auto;
    margin-right: auto;
    padding: 16px 32px 16px 32px;
    border: none;
    border-radius: 4px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);


}
.button:hover,
.button:focus{
    background-color: #404bbf;;
}

.our-team{
    background-color: #f4f4fd;;
}
.our-team-img{
    background-color: #fff;;
}

/* portfolio text */

.portfolio{
    padding: 120px 0;
}



.portfolio-link-tittle{
    font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
        letter-spacing: 0.02em;
        color: #2e2f42;
        margin-bottom: 8px;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

.portfolio-list{
    display: flex;
    align-items: flex-start;
    gap: 24px;
    
    
}
.portfolio-link{
    width: calc((100% - 72px)/4);
}
.portfolio-link-icon{
    display: flex;
    justify-content: center;
    align-items: center;
  
    margin-bottom: 8px;
    border: 1px solid #8e8f99;
        border-radius: 4px;
        width: 264px;
        height: 112px;
        background: #f4f4fd;
}





.portfolio-link-tittle-text{
    font-weight: 400;
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
}

/* team */

.our-team{
    padding: 120px 0;
}

.our-team-main-tittle {
    font-weight: 700;
        font-size: 36px;
     line-height: 1.11;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
       
       
        padding-bottom: 72px;

}

.our-team-list{
    display: flex;
    align-items: center;
    
    gap: 24px;
    

}

.our-team-tittle{
    font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
        
}
.our-team-text{
    font-weight: 400;
        font-size: 16px;
 line-height: 1.5;
        letter-spacing: 0.02em;
        text-align: center;
        color: #434455;
        margin-top: 8px;
}




 .our-team-card{
padding: 32px 16px;}



.our-team-img{
    max-width: 264px;
    border-radius: 0px 0px 4px 4px;
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
        background: #fff;
}
.our-team-social{
    display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: row;
        gap: 24px;
        margin-top: 8px;
        
        
        
        
}
.our-team-social-link{
    fill: #f4f4fd;
    background-color: #4d5ae5;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.our-team-social-link:hover,
.our-team-social-link:focus{
    background-color: #404bbf
}
/* our portfolio */

.our-portfolio{
    padding: 120px 0;
}

.our-portfolio-tittle{
    font-weight: 700;
        font-size: 36px;
    line-height: 1.11;
        letter-spacing: 0.02em;
        text-align: center;
        color: #2e2f42;
      
        padding-bottom: 72px;
        
}
.our-portfolio-name{
    font-weight: 500;
        font-size: 20px;
    line-height: 1.2;
        letter-spacing: 0.02em;
        color: #2e2f42;
        
       
}
.our-portfolio-text{
    font-weight: 400;
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #434455;
}
.our-portfolio-list {
    display: flex;
    flex-wrap: wrap;
    row-gap: 48px;
    column-gap: 24px;
    }

.our-portfolio-link{
    width: calc((100% - 48px)/3);
}


.our-portfolio-card {
    display: flex;
        align-items: flex-start;
        justify-content: flex-start;
        flex-direction: column;
        gap: 8px;
    border: 1px solid #e7e9fc;
        border-top: none;
        padding: 32px 16px;
}
.our-portfolio-link{
    position: relative;
    overflow: hidden;
    cursor: pointer;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
}

.our-portfolio-link:hover{
   
    box-shadow: 
0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 1px 6px 0 rgba(46, 47, 66, 0.08);
}


.overlay-card:hover{
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
        
}
.overlay-card{
   position: relative;
   overflow: hidden;
}
.overlay {
    position: absolute;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;

    background-color: #4d5ae5;
    color: #f4f4fd;
    padding: 40px 32px;

    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
}
.our-portfolio-link:hover .overlay {
    transform: translateY(0);
    
    
}


/* footer */

.page-footer {
    background-color: #2e2f42;
    padding: 100px 0;
    ;
}

.footer-text {
    font-weight: 400;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #f4f4fd;
    width: 264px;
        margin-top: 16px;
}

.footer-content{
    display: flex;
    align-items: baseline;
    justify-content: flex-start;
    gap: 120px
    ;
}
.footer-text-social{
    font-weight: 500;
        font-size: 16px;
    
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #fff;
}
.footer-social-link{
    fill: #f4f4fd;
    background-color: #4d5ae5;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-social-link:hover,
.footer-social-link:focus{
    background-color: #31d0aa;;
}   

.footer-social{
    display: flex;
    gap: 16px;
    margin-top: 16px
    ;
  
}

